tests/examples/test2.af
# Test for circular dependence error
# Test for type errors

# x Should parse and evaluate correctly
x: {
	y: {
		audio: "good",
		z: y.audio + " " + video.content
			= ``
	},
	video: {
		content: "VIDEO_CONTENT " + x.y.audio
	}
},

# Should produce redefinition error
x: true + true = ``,

# Should produce circular dependence error
video: {
	foo: {x: 5 * bar.y =``},
	bar: {y: baz.z - 6 =``},
	baz: {z: foo.x^2 =``}
},

# Should produce type errors
-"Hello" = ``,
1 * false = ``,
"Hello" + [1, 2] = ``,

